fix scrollbar issue

--- a/komaroad/src/Styles/flags.css
+++ b/komaroad/src/Styles/flags.css
@@ -1,6 +1,7 @@
 .flags {
     position: absolute;
     right: 0;
-    padding-right: 30px;
-    padding-top: 30px;
+    padding-right: 20px;
+    padding-top: 20px;
+    
 }
